k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: zero-trust-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: zero-trust-app

  template:
    metadata:
      labels:
        app: zero-trust-app
        # Removed imagePullSecrets coz our node IAM role already has: our node IAM role already has:
    spec:
      serviceAccountName: irsa-sa                  ##service account
      containers:
        - name: zero-trust-container
          image: 584673484425.dkr.ecr.ap-south-1.amazonaws.com/eks-zero-trust-app:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 3000

          readinessProbe:
            httpGet:
              path: /                     ##### /health Removed from code... to avoid error you have added previous project path 
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20
