k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: eks-enterprise-service
    spec:
       type: NodePort
       selector:
         app: eks-enterprise
       ports:
       - name: http
         protocol: TCP
         port: 3000
         targetPort: 3000
         nodePort: 30007

metadata:
  name: zero-trust-service

spec:
  type: LoadBalancer    ### Removed Node port Added LB AWS creates LB automatically Public access

  selector:
    app: zero-trust-app

  ports:
    - protocol: TCP
      port: 80              ##Port exposed by service
      targetPort: 3000            ##Port inside container (your Node.js app)
